crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__projects_groups__projects_repair_json_needs_force.snap
---
source: crates/engram-cli/tests/cli/snapshot/projects_groups.rs
expression: "f.run(&[\"--format\", \"json\", \"projects\", \"repair\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] --format json projects repair
exit: 1
--- stdout ---
--- stderr ---
Error: projects repair requires confirmation; re-run with --force in JSON mode
