crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__projects_groups__projects_repair_rekeys_after.snap
---
source: crates/engram-cli/tests/cli/snapshot/projects_groups.rs
expression: "f.run(&[\"projects\", \"list\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] projects list
exit: 0
--- stdout ---
[
  {
    "exists": true,
    "project_id": "[PROJECT_ID]",
    "project_path": "[PROJECT]"
  }
]
--- stderr ---
